--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,14 +18,14 @@ jobs:
 
       - name: Instalar dependencias
         run: npm install
-        working-directory: ./app
+        working-directory: /app
 
       - name: Ejecutar pruebas
         run: npm test
-        working-directory: ./app
+        working-directory: /app
         
       - name: Construir imagen Docker
-        run: docker build -t mi-app-ci-cd ./app
+        run: docker build -t mi-app-ci-cd /app
 
       - name: Ejecutar contenedor
         run: docker run -d -p 3000:3000 mi-app-ci-cd
